Examples/bad/parse/prog.lifp
// (prog List Element)

(prog)
(prog ())

(prog non-list el)
(prog (too) much args)
